--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Streamdata Gallery
-url: gsa-per-diem-api.api.streamdata.gallery
+title: Streamdata Gallery GSA Per Diem API
+url: gsa-per-diem-api.streamdata.gallery
 tag: GSA Per Diem API
 markdown: kramdown
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md", ".DS_Store"]
-github_user: streamdata-gallery-organizations
+github_user: streamdata-gallery
 github_repo: gsa-per-diem-api
 github_branch: master
 collections:
