--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
-title: Streamdata Gallery GSA Per Diem API
+title: Streamdata API Gallery - 
+description: A gallery of APIs to demonstrate what is possible when it comes to making data, content, and algorithms more real time, and event-driven as part of the API economy.
 url: gsa-per-diem-api.streamdata.gallery
-tag: GSA Per Diem API
+tag: 
 markdown: kramdown
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md", ".DS_Store"]
-github_user: streamdata-gallery
+github_user: streamdata-gallery-entities
 github_repo: gsa-per-diem-api
 github_branch: master
 collections:
